SW-7866 Fixed: The print button text is now centered on mobile

--- a/engine/Shopware/Themes/Frontend/Responsive/frontend/_public/src/less/_modules/finish.less
+++ b/engine/Shopware/Themes/Frontend/Responsive/frontend/_public/src/less/_modules/finish.less
@@ -14,6 +14,10 @@
     .unitize-margin(0, 0, 20, 0);
 }
 
+.teaser--btn-print {
+    text-align: center;
+}
+
 .finish--info {
     .clearfix();
 }
@@ -44,6 +48,8 @@
 }
 
 @media screen and (min-width: @tabletViewportWidth) {
+
+    .teaser--btn-print { text-align: left }
 
     .is--act-finish .content-main {
         .unitize(40, 16, margin-top);
